# Hpc-LabelPropagation-Project

./: .gitignore  README.md
.github/workflows/: cmake.yml
LabelPropagation-C++/: CMakeLists.txt  compile.sh  hyper_graph_gen.cpp  main.cpp
LabelPropagation-C++/old_implementation/first_implementation/: label_propagation.cpp  utils.cpp
LabelPropagation-C++/old_implementation/first_implementation/headers/: label_propagation.h
LabelPropagation-C++/resources/: h_test_hypergraph_1000_60.txt  h_test_hypergraph_1000_80.txt  h_test_hypergraph_10_3.txt  h_test_hypergraph_5000_300.txt  h_test_hypergraph_5000_300_0.500000.txt  h_test_hypergraph_5000_300_0.700000.txt  hyper_graph_test_compute_vertex_label_connected.txt  hyper_graph_test_find_communities_connected.txt
LabelPropagation-C++/src/: CMakeLists.txt  label_propagation.cpp  label_propagation.h  tester_main.cpp  utils.cpp
LabelPropagation-C++/src/benchmarks/: CMakeLists.txt  benchmark.cpp  utils.hpp
LabelPropagation-C++/src/benchmarks/hypergraph_to_graph/: 3  a.out  benchmark_opt_1.cpp  hypergraph_to_graph.cpp  label_propagation.h
LabelPropagation-C++/src/benchmarks/opt_1/: CMakeLists.txt  benchmark_opt_1.cpp
LabelPropagation-C++/src/benchmarks/opt_2/: CMakeLists.txt  benchmark_opt_2.cpp
LabelPropagation-C++/src/benchmarks/opt_3/: CMakeLists.txt  benchmark_opt_3.cpp
LabelPropagation-C++/src/benchmarks/opt_4/: CMakeLists.txt  benchmark_opt_4.cpp
LabelPropagation-C++/src/benchmarks/sequential/: CMakeLists.txt  benchmark_sequential.cpp
LabelPropagation-C++/src/benchmarks/simple/: CMakeLists.txt  simple.cpp
LabelPropagation-C++/src/code/: CMakeLists.txt
LabelPropagation-C++/src/code/opt_1/: CMakeLists.txt  label_propagation.cpp  utils.cpp
LabelPropagation-C++/src/code/opt_1/headers/: label_propagation.h
LabelPropagation-C++/src/code/opt_2/: CMakeLists.txt  label_propagation.cpp  utils.cpp
LabelPropagation-C++/src/code/opt_2/headers/: label_propagation.h  mtrnd.h
LabelPropagation-C++/src/code/opt_3/: CMakeLists.txt  label_propagation.cpp  utils.cpp
LabelPropagation-C++/src/code/opt_3/headers/: label_propagation.h
LabelPropagation-C++/src/code/opt_4/: CMakeLists.txt  label_propagation.cpp  utils.cpp
LabelPropagation-C++/src/code/opt_4/headers/: label_propagation.h
LabelPropagation-C++/src/code/sequential/: CMakeLists.txt  label_propagation.cpp  utils.cpp
LabelPropagation-C++/src/code/sequential/headers/: label_propagation.h
LabelPropagation-C++/src/headers/: label_propagation.h  structs.h
LabelPropagation-C++/test/: CMakeLists.txt  example_test.cc  utils_test.cc
LabelPropagation-C++/tools/: generate_hg.sh  randHypergraph
LabelPropagation-Julia/: LICENSE  Manifest.toml  Project.toml  README.md
LabelPropagation-Julia/src/: LabelPropagation.jl  add_dependecies.jl  find_communities.jl  read_hypergraph.jl  run.jl
LabelPropagation-Julia/test/: runtests.jl
documentation/: compile.sh  main.tex
documentation/img/: SizeVariabileDensitaCostante07.eps  opt1234_07.eps  speedUP.eps  timeOverDensityMedium3.eps  timeOverDensityMediumopt234.eps
